# MacOS-Hardware-Monitor

./: README.md
hardware_monitor-proj/: Cargo.toml
hardware_monitor-proj/src/: main.rs
